successfully merged leo's css with my previous stuff, created about page and home page too

--- a/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/about.html
+++ b/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/about.html
@@ -1,7 +1,21 @@
 {% extends "layout.html" %}
 {% block content %}
    <div class="about">
-     <h1>About me</h1>
-     <p>This is a portfolio site about anything that can be put in a portfolio.</p>
+     <h1>About Our Team</h1>
+     <p>We are a group of young professionals who all share a passion for staying informed on events within the cryptocurrency space.
+      <br>Despite our love for this industry, we recognize the need for  more sources of unbiased market information.<br>
+      <br> In order for the cryptocurrency sector to go mainstream, participants in the space need to improve the general quality of discourse regarding market trends. 
+      <br> As a part of this general improvement, participants in this market will need to integrate traditional metrics for evaluating securties.
+      <br>
+      <br>We aim to provide our users with a simple and easily understandable platform where they can access quality visuals based on conventionally accepted analytical methods.<br>
+      <br>Our primary wish is to provide utility for users who already understand traditional security valuation strategies for risk and reward.
+      <br>However, we also hope to encourage inexperienced speculators to add to their analytical toolbox when evaluating cryptocurrency assets.
+     </p>
+     <p>
+      <br>Ray Hurst,
+      <br>Ahmed Mohammed,
+      <br>Leo Harada, 
+      <br>Nathan Duft, 
+      <br>Michael Bejan</p>
    </div>
  {% endblock %}
