--- a/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/layout.html
+++ b/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/layout.html
@@ -7,11 +7,15 @@
   <body>
     <header>
       <div class="container">
-        <h1 class="logo">Ardit's web app</h1>
+        <h1 class="logo">Crypto Corrisk</h1>
         <strong><nav>
           <ul class="menu">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
+            <li><a href="{{ url_for('year_2017_vis') }}">year_2017_vis</a></li>
+            <li><a href="{{ url_for('year_2018_vis') }}">year_2018_vis</a></li>
+            <li><a href="{{ url_for('year_2019_vis') }}">year_2019_vis</a></li>
+            <li><a href="{{ url_for('year_2020_vis') }}">year_2020_vis</a></li>
           </ul>
         </nav></strong>
       </div>
