--- a/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/home.html
+++ b/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/home.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
   <div class="home">
-    <h1>A Python product</h1>
-    <p>This website was built with Python via the Flask framework.</p>
+    <h1>Welcome!</h1>
+    <p>Crypto Corrisk aims to encourage informed retail investing, not unfounded price speculation.<br>
+      <br>The purpose of this site it to provide accessible and digestible information of popular cryptocurrencies in both past and present market conditions.
+      <br>Our goal is to cut through all of the market noise, and give consumers access to no-nonsense historic visuals and comprehensive price forecasting in the near-term.
+      </p>
   </div>
 {% endblock %}
