tweaked about and home page, fixed typos

--- a/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/about.html
+++ b/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/about.html
@@ -12,10 +12,16 @@
       <br>However, we also hope to encourage inexperienced speculators to add to their analytical toolbox when evaluating cryptocurrency assets.
      </p>
      <p>
-      <br>Ray Hurst,
-      <br>Ahmed Mohammed,
-      <br>Leo Harada, 
-      <br>Nathan Duft, 
-      <br>Michael Bejan</p>
+      <br>Ray Hurst:  
+      <br>Project Manager, Auxiliary Web Developer / Analyst <br>
+      <br>Ahmed Mohammed: 
+      <br>Analyst, Researcher <br>
+      <br>Leo Harada: 
+      <br>Sales Specialist, Web Developer <br>
+      <br>Nathan Duft: 
+      <br>Analyst, Back End Developer <br>
+      <br>Michael Bejan: 
+      <br>Analyst, Back End Developer <br>
+    </p>
    </div>
  {% endblock %}
