--- a/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/home.html
+++ b/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/home.html
@@ -4,7 +4,7 @@
     <h1>Welcome!</h1>
     <p>Crypto Corrisk aims to encourage informed retail investing, not unfounded price speculation.<br>
       <br>The purpose of this site it to provide accessible and digestible information of popular cryptocurrencies in both past and present market conditions.
-      <br>Our goal is to cut through all of the market noise, and give consumers access to no-nonsense historic visuals and comprehensive price forecasting in the near-term.
+      <br>Our goal is to cut through all of the market noise, and give consumers access to no-nonsense historic visuals as well as comprehensive price forecasting in the near-term.
       </p>
   </div>
 {% endblock %}
