--- a/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/year_2020_visuals.html
+++ b/App_Deployment_Round_1/Webpage/Flask_Merged_Content/app/templates/year_2020_visuals.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>2020 Page (Visuals Only)</h1>
+    <p>This page provides visual data that allows users to view basic risk and return metrics in the cryptocurrency market for the year 2019.</p>
 
 </body>
 
